--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
 
- @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&lang=en");
+ @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700 &lang=en");
 
  @import 'bootstrap';
- @import 'admin-lte/dist/css/adminlte';
+ @import 'admin-lte/dist/css/adminlte'
