--- a/app/views/cadence/mine.html.erb
+++ b/app/views/cadence/mine.html.erb
@@ -1,2 +1,44 @@
-<h1>Cadence#mine</h1>
-<p>Find me in app/views/cadence/mine.html.erb</p>
+<h1>Timesheet</h1>
+
+    
+
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <title>Stopwatch</title>
+    </head>
+    <body>
+        <div>Seconds: <span id="time">0</span></div>
+        <input type="button" id="startTimer" value="Clock In" onclick="start();"><br/>
+        <input type="button" id="stopTimer" value="Clock out"  onclick="stop();"><br/>
+        <input type="button" id="resetTimer" value="Reset"  onclick="reset();"><br/>
+        <script>
+            var timeElapsed = 0;
+            var timerID = -1;
+            function tick() {
+                timeElapsed++
+                document.getElementById("time").innerHTML = timeElapsed;
+            }
+
+            function start() {
+                if(timerID == -1){
+                    timerID = setInterval(tick, 1000);
+                }
+            }
+
+            function stop() {
+                if(timerID != -1){
+                    clearInterval(timerID)
+                    timerID = -1
+                }
+            }
+
+            function reset() {
+                stop();
+                timeElapsed = -1;
+                tick()
+            }
+        </script>
+    </body>
+</html>
+
