--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TimesheetApp</title>
+    <title>Testing App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/youruniqueID.js"></script>
@@ -14,10 +14,10 @@
     <div class="wrapper">
       <%= render partial: "layouts/header" %>
       <%= render partial: "layouts/sidebar" %>
-      <div class="content-wrapper">
-        <%= yield %>
-      </div>
-      <%=  render partial: "layouts/footer" %>
+    <div class="content-wrapper">
+      <%= yield %>
+    </div>
+    <%= render partial: "layouts/footer" %>
     </div>
   </body>
 </html>
